--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
   <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Simon Franklin</a>.
+    Coded by <a href="https://github.com/simonfranklin1" target="_blank">Simon Franklin</a>.
   </footer>
 </body>
 </html>
